--- a/2.html
+++ b/2.html
@@ -7,7 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    <a href="7.html">任务一</a>
-
+<a href="http://www.jnshu.com">这是链接</a>
 </body>
 </html>
