--- a/3.html
+++ b/3.html
@@ -7,7 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    <a href="7.html">任务一</a>
-
+<img src="C:\Users\qingshan\Desktop/kkk.jpg">
 </body>
 </html>
