--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
 </head>
 <body>
     <a href="7.html">任务一</a>
+    <a href="1.thml">任务二</a>
+    <a href="2.thml">任务三</a>
+    <a href="3.thml">任务四</a>
+    <a href="4.thml">任务五</a>
+    <a href="5.html">任务六</a>
+    <a href="6.thml">任务七</a>
 
 </body>
 </html>
