--- a/index.html
+++ b/index.html
@@ -1,13 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
 </head>
+
 <body>
-    <a href="./5.html">dfdf</a>
-  
+    <a href="7.html">九宫格</a>
+    <a href="5.html"十六宫格></a>
+
 </body>
+
 </html>
