--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 </head>
 
 <body>
-    <a href="./任务一/7.html">九宫格</a>
-    <a href="./任务一/5.html">十六宫格</a>
+    <a href="./renwu1/7.html">九宫格 </a>
+    <a href="./renwu1/5.html">十六宫格 </a>
 
 </body>
 
