--- a/renwu1/7.html
+++ b/renwu1/7.html
@@ -11,28 +11,27 @@
             margin: 0;
         }
 
-        .df {
+        .box {
             float: left;
-            width: 30.5vw;
-            padding-top: 30.5vw;
-            margin: 1vw;
+            width: 31.5%;
+            padding-top:31.5%;
+            margin: 0.8vw;
             background-color: orange;
             border-radius:1em
-
         }
     </style>
 </head>
 
 <body>
-    <div class="df"></div>
-    <div class="df"></div>
-    <div class="df"></div>
-    <div class="df"></div>
-    <div class="df"></div>
-    <div class="df"></div>
-    <div class="df"></div>
-    <div class="df"></div>
-    <div class="df"></div>
+    <div class="box"></div>
+    <div class="box"></div>
+    <div class="box"></div>
+    <div class="box"></div>
+    <div class="box"></div>
+    <div class="box"></div>
+    <div class="box"></div>
+    <div class="box"></div>
+    <div class="box"></div>
 </body>
 
 </html>
