--- a/renwu1/7.html
+++ b/renwu1/7.html
@@ -14,10 +14,10 @@
         .box {
             float: left;
             width: 31.5%;
-            padding-top:31.5%;
-            margin: 0.8vw;
+            padding-top: 31.5%;
+            margin: 0.8%;
             background-color: orange;
-            border-radius:1em
+            border-radius: 3%
         }
     </style>
 </head>
