--- a/renwu1/7.html
+++ b/renwu1/7.html
@@ -17,21 +17,24 @@
             padding-top: 31.5%;
             margin: 0.8%;
             background-color: orange;
-            border-radius: 3%
+            border-radius: 3%；
         }
     </style>
 </head>
 
 <body>
-    <div class="box"></div>
-    <div class="box"></div>
-    <div class="box"></div>
-    <div class="box"></div>
-    <div class="box"></div>
-    <div class="box"></div>
-    <div class="box"></div>
-    <div class="box"></div>
-    <div class="box"></div>
+    <div>
+        <div class="box"></div>
+        <div class="box"></div>
+        <div class="box"></div>
+        <div class="box"></div>
+        <div class="box"></div>
+        <div class="box"></div>
+        <div class="box"></div>
+        <div class="box"></div>
+        <div class="box"></div>
+    </div>
+
 </body>
 
 </html>
