--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <a href="./renwu1/7.html">九宫格 </a>
     <a href="./renwu1/5.html">十六宫格 </a>
-
+<a href="./renwu1/3.html">选择器</a>
 </body>
 
 </html>
