--- a/css1/9box.html
+++ b/css1/9box.html
@@ -17,13 +17,14 @@
             padding-top: 31.5%;
             margin: 0.8%;
             background-color: orange;
-            border-radius: 3%；
+            border-radius: 5%;
         }
     </style>
 </head>
 
-<body>
-    <div>
+<body>  
+       <div>
+
         <div class="box"></div>
         <div class="box"></div>
         <div class="box"></div>
