--- a/css1/liangduanduiqi.html
+++ b/css1/liangduanduiqi.html
@@ -7,27 +7,22 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
     <style type="text/css">
-        div#outer {
-            width: 500px;
+        h1 {background-color: brown;
+            
         }
-
-        div#inner {
-            text-indent: 10%;
+a { display: inline-block;
+    text-align:justify;
         }
+        {
 
-        p {
-            width: 200px;
         }
     </style>
 </head>
 
 <body>
-    <div id="outer">
-        <div id="inner">some text. some text. some text.
-            <p>this is a paragragh.</p>
-        </div>
-    </div>
-
+<h1>
+    <a>豆腐干豆腐干豆死队风格的地方腐干岁的法国的风格岁dddgaedgadfgfdhydgfhdgfhdgfhdgfgfhgfhgfhgfh的法国的风格岁的法国岁的法国</a>
+</h1>
 </body>
 
 </html>
