--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 </head>
 
 <body>
-    <a href="./renwu1/7.html">九宫格 </a>
-    <a href="./renwu1/5.html">十六宫格 </a>
-<a href="./renwu1/3.html">选择器</a>
+    <a href="./css1/9box.html">九宫格 </a>
+    <a href="./css1/5.html">十六宫格 </a>
+<a href="./css/3.html">选择器</a>
 </body>
 
 </html>
