--- a/css1/liangduanduiqi.html
+++ b/css1/liangduanduiqi.html
@@ -7,22 +7,24 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
     <style type="text/css">
-        h1 {background-color: brown;
-            
-        }
-a { display: inline-block;
-    text-align:justify;
-        }
-        {
+        h1  {width: 30em;
+            background-color: brown;
 
+        }
+
+        ol li {display: block;
+            font-size:2em;
+            text-align:last;
+            text-align: justify;
         }
     </style>
 </head>
 
 <body>
-<h1>
-    <a>豆腐干豆腐干豆死队风格的地方腐干岁的法国的风格岁dddgaedgadfgfdhydgfhdgfhdgfhdgfgfhgfhgfhgfh的法国的风格岁的法国岁的法国</a>
-</h1>
-</body>
+   <h1> <ol>
+    <li>对方的身份打发士大夫似的打发打发</li>
+    <li>的嘎撒嘎嘎是个打发士大夫</li>      </ol>  
+      </h1>
+      </body>
 
 </html>
