--- a/task3/1.html
+++ b/task3/1.html
@@ -16,13 +16,14 @@
     </div>
 
     <div class="header">
-        <img src="qqq.png"></div>
+        <img src="qqq.png">
+    </div>
 
 
-        <div class="p">
-            <p>葡萄藤轻游戏专注于桌游领域，提供在线杀人游戏， 捉鬼，炸狼堡等多种聚会游戏，以下线下聚会桌游道具。
-            </p>
-        </div>
+    <div class="p">
+        <p>葡萄藤轻游戏专注于桌游领域，提供在线杀人游戏， 捉鬼，炸狼堡等多种聚会游戏，以下线下聚会桌游道具。
+        </p>
+    </div>
 
 
 
