--- a/task3/1.html
+++ b/task3/1.html
@@ -6,27 +6,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
-    <link rel="stylesheet" type="text/css" href="1.css">
+    <link rel="stylesheet" type="text/css" href="css/1.css">
 </head>
 
 <body>
-    <div>
-        <img src="aaa.png">
-
+    <div class="boult">
+        <img class="picture" src="img/aaa.png">
+    </div>
+    <div class="box">
+        <img class="header" src="img/qqqq.png">
     </div>
 
-    <div class="header">
-        <img src="qqq.png">
+    <p class="explain">葡萄藤轻游戏专注于桌游领域，提供在线杀人游戏，捉鬼，炸狼堡等多种聚会游戏，以下线下聚会桌游道具。</p>
+    <div class="logo-left ">
+        <img class="logo-picture" src="img/sss.png">
+        <p class="name">289898922</p>
     </div>
-
-
-    <div class="p">
-        <p>葡萄藤轻游戏专注于桌游领域，提供在线杀人游戏， 捉鬼，炸狼堡等多种聚会游戏，以下线下聚会桌游道具。
-        </p>
+    <div class="logo-right">
+        <img class="other-picture" src="img/ccc.png">
+        <p class="english-name">BJPTTeng</p>
     </div>
-
-
-
 </body>
 
 </html>
