--- a/task4/1.html
+++ b/task4/1.html
@@ -13,6 +13,10 @@
         <p class="center">登陆</p>
         <p class="right">注册</p>
     </header>
+    <div>
+        <img class="iphone" src="img/iphone.png">
+        <input type="text">
+    </div>
     
 </body>
 </html>
