--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <a href="./css1/9box.html">九宫格 </a>
     <a href="./css1/5.html">十六宫格 </a>
     <a href="./task3/1.html" >任务三</a>
-    <a href="./task4/1.html"任务四/a>
+    <a href="./task4/1.html">任务四</a>
 </body>
 
 </html>
