--- a/task4/1.html
+++ b/task4/1.html
@@ -13,9 +13,16 @@
         <p class="center">登陆</p>
         <p class="right">注册</p>
     </header>
-    <div>
+    <div class="top-box">
         <img class="iphone" src="img/iphone.png">
-        <input type="text">
+        <p class="top-border"></p>
+        <input type="text" value="请输入手机号">
+    </div>
+    <div class="down-box">
+        <img class="locked" src="img/locked.png">
+        <p></p>
+        <input type="password" value="请输入密码">
+
     </div>
     
 </body>
