--- a/test/test.html
+++ b/test/test.html
@@ -6,25 +6,21 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
    
-<script type="text/javascript">
-function alignText()
-{
-document.getElementById("td1").style.verticalAlign="bottom";
-}
-</script>
+<style>
+  div{
+    background: gray;
+  }
+  span{
+    line-height: 100px;
+  }
+</style>
 </head>
 <body>
 
-<table border="1" height="100px">
-  <tr>
-    <td id="td1">
-    Some example text
-    </td> 
-  </tr>
-</table>
-<br />
-<input type="button" onclick="alignText()"
-value="Align text" />
+<div>
+  <span>1</span>
+</div>
+ 
 
 </body>
 </html>
