--- a/task4/1.html
+++ b/task4/1.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,6 +8,7 @@
     <title>Document</title>
     <link rel="stylesheet" type="text/css" href="css/1.css">
 </head>
+
 <body>
     <header>
         <p class="left">关闭</p>
@@ -16,14 +18,17 @@
     <div class="top-box">
         <img class="iphone" src="img/iphone.png">
         <p class="top-border"></p>
-        <input type="text" value="请输入手机号">
+        <input type="text" placeholder="请输入手机号">
     </div>
     <div class="down-box">
         <img class="locked" src="img/locked.png">
-        <p></p>
-        <input type="password" value="请输入密码">
-
+        <p class="down-border"></p>
+        <input type="password" placeholder="请输入密码">
     </div>
-    
+    <button type="button">登陆</button>
+    <a href="">忘记密码？</a>
+
+  
 </body>
+
 </html>
