--- a/test/test.html
+++ b/test/test.html
@@ -7,18 +7,26 @@
     <title>Document</title>
    
 <style>
-  div{
+  .box {
+    float: left;
+    width: 100%;
     background: gray;
+    height: 100px;
+
   }
-  span{
-    line-height: 100px;
+  .a{
+    width: 100%;
+    float: left;
+    height: 200px;
+    background-color: aqua;
   }
+  
 </style>
 </head>
-<body>
 
-<div>
-  <span>1</span>
+
+<div class="a">
+  <div class="box"></div>
 </div>
  
 
