--- a/task5/1.html
+++ b/task5/1.html
@@ -72,6 +72,10 @@
         </div>
         <div class="line"></div>
     </ul>
+    <div class="footer">
+        <button class="leave-word">留言</button>
+        <button class="telephone">电话联系</button>
+</div>
 </body>
 
 </html>
