--- a/test/test.html
+++ b/test/test.html
@@ -6,21 +6,35 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Document</title>
+  <style type="text/css">
+    div {
+      height: 100px;
+      background: url(../task6/img/calendar1.png) no-repeat;}
+      .Shape {
+        height: 23px;
+        width: 19px;
+        background-position: 0 -44px;
+  
 
+    }
+  i {
+    display: inline-block;
+    height: 23px;
+        width: 19px;
+        background-position: 0 -44px;
+        background: url(../images/img.png) no-repeat;
+      
+  }
+  </style>
 </head>
 
 <body>
-  <div style="position:relative;margin-left: 10%;height: 30px; margin-top: 50px;" class="col-xs-6">
-    <span style="margin-left:115px;width:18px;overflow:hidden;height: 30px;">
-    <select id="_select" style="width:240px;margin-left:-115px;height: 30px;" onchange="setRuleContent();"> 
-<option value="1">请选择....</option>
-<option value="1">11</option>
-<option value="1">22</option>
-<option value="1">33</option></select>
-</span>
-<input id="_input" type="text" style="width:220px;position:absolute;left:0px;height:24px;"   onchange="setRuleContent1();"  placeholder="输入">
-</div>
+  <div>
 
+  </div>
+  <i>
+
+  </i>
 </body>
 
 </html>
