--- a/task6/1.html
+++ b/task6/1.html
@@ -65,6 +65,7 @@
                 <li class="shape">北京.通州.果园</li>
             </ul>
         </li>
+        <div class="lien1"></div>
         <li class="big-list-li">
             <ul class="small-list">
                 <li class="calendar">服务日期</li>
@@ -79,6 +80,7 @@
                 <li class="shape">北京.通州.果园</li>
             </ul>
         </li>
+        <div class="lien1"></div>
         <li class="big-list-li">
             <ul class="small-list">
                 <li class="calendar">服务日期</li>
@@ -93,6 +95,7 @@
                 <li class="shape">北京.通州.果园</li>
             </ul>
         </li>
+        <div class="lien1"></div>
         <li class="big-list-li">
             <ul class="small-list">
                 <li class="calendar">服务日期</li>
@@ -107,6 +110,7 @@
                 <li class="shape">北京.通州.果园</li>
             </ul>
         </li>
+        <div class="lien1"></div>
         <li class="big-list-li">
             <ul class="small-list">
                 <li class="calendar">服务日期</li>
@@ -121,6 +125,7 @@
                 <li class="shape">北京.通州.果园</li>
             </ul>
         </li>
+        <div class="lien1"></div>
         <li class="big-list-li">
             <ul class="small-list">
                 <li class="calendar">服务日期</li>
@@ -135,8 +140,23 @@
                 <li class="shape">北京.通州.果园</li>
             </ul>
         </li>
+
     </ul>
+    <div class="lien2"></div>
+<div class="footer">
+    <div class="text-align-conter">
+        <img class="house" src="img/house.png"><p>首页</p>
 
+    </div>
+    <div>
+        <img class="write" src="img/Write.png">
+
+    </div>
+    <div class="text-align-conter">
+        <img class="locus" src="img/locus.png"><p>我的</p>
+
+    </div>
+</div>
 
 
 
