--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
     <a href="./css1/5.html">十六宫格 </a>
     <a href="./task3/1.html" >任务三</a>
     <a href="./task4/1.html">任务四</a>
+    <a href="./task5/1.html">任务五</a>
+    <a href="./task6/1.html">任务六</a>
 </body>
 
 </html>
