--- a/task4/1.html
+++ b/task4/1.html
@@ -11,22 +11,22 @@
 
 <body>
     <header>
-        <p class="left">关闭</p>
-        <p class="center">登陆</p>
-        <p class="right">注册</p>
+        <a class="left">关闭</a>
+        <a>登陆</a>
+        <a class="right">注册</a>
     </header>
     <div class="top-box">
         <img class="iphone" src="img/iphone.png">
-        <p class="top-border"></p>
-        <input type="text" placeholder="请输入手机号">
+        <div class="top-border"></div>
+        <input type="number" placeholder="请输入手机号">
     </div>
     <div class="down-box">
         <img class="locked" src="img/locked.png">
-        <p class="down-border"></p>
+        <div class="down-border"></div>
         <input type="password" placeholder="请输入密码">
     </div>
     <button type="button">登陆</button>
-    <a href="">忘记密码？</a>
+    <a class="a" href="">忘记密码</a> 
 
   
 </body>
