--- a/test/test.html
+++ b/test/test.html
@@ -1,40 +1,44 @@
-<!DOCTYPE html>
-<html lang="en">
-
+<!DOCTYPE HTML>
+<html>
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Document</title>
-  <style type="text/css">
-    div {
-      height: 100px;
-      background: url(../task6/img/calendar1.png) no-repeat;}
-      .Shape {
-        height: 23px;
-        width: 19px;
-        background-position: 0 -44px;
-  
-
-    }
-  i {
-    display: inline-block;
-    height: 23px;
-        width: 19px;
-        background-position: 0 -44px;
-        background: url(../images/img.png) no-repeat;
-      
-  }
-  </style>
+<meta charset="utf-8">
+<title>基础表格</title>
+<link href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.css" rel="stylesheet">
 </head>
 
 <body>
-  <div>
-
-  </div>
-  <i>
-
-  </i>
+  <div class="table-responsive">
+    <table class="table table-bordered">
+    <thead>
+      <tr>
+        <th>表格标题</th>
+        <th>表格标题</th>
+        <th>表格标题</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td>表格单元格</td>
+        <td>表格单元格</td>
+        <td>表格单元格</td>
+      </tr>
+      <tr>
+        <td>表格单元格</td>
+        <td>表格单元格</td>
+        <td>表格单元格</td>
+      </tr>
+      <tr>
+        <td>表格单元格</td>
+        <td>表格单元格</td>
+        <td>表格单元格</td>
+      </tr>
+      <tr>
+        <td>表格单元格</td>
+        <td>表格单元格</td>
+        <td>表格单元格</td>
+      </tr>
+    </tbody>
+  </table>
+ </div>
 </body>
-
 </html>
