--- a/task7/1.html
+++ b/task7/1.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,10 +8,35 @@
     <title>Document</title>
     <link rel="stylesheet" type="text/css" href="css/1.css">
 </head>
+
 <body>
     <div class="header">
         <img class="form" src="img/form.png">
     </div>
-    
+    <div class="title">
+        <span>上次游戏：捉鬼猜词版</span>
+        <img src="img/Back.png">
+    </div>
+    <div class="box">
+        <div class="name">
+            捉鬼游戏
+        </div>
+        <div class="line"></div>
+        <div class="triangle"></div>
+        <div class="plate">简化版</div>
+        <p class="tag">有1123个用户正在玩此款游戏</p>
+        <div class="plate">猜词版</div>
+        <p class="tag">有1123个用户正在玩此款游戏</p>
+        <div class="plate">白痴版</div>
+        <p class="tag">有1123个用户正在玩此款游戏</p>
+        <div class="paging">
+            <div class="circle circle1"></div>
+            <div class="circle circle2"></div>
+            <div class="circle circle3"></div>
+            <div class="circle circle4"></div>
+        </div>
+
+    </div>
 </body>
+
 </html>
