--- a/test/test.html
+++ b/test/test.html
@@ -4,41 +4,34 @@
 <meta charset="utf-8">
 <title>基础表格</title>
 <link href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.css" rel="stylesheet">
-</head>
+<script src="http://cdn.static.runoob.com/libs/jquery/2.1.1/jquery.min.js"></script>
+<script src="http://cdn.static.runoob.com/libs/bootstrap/3.3.7/js/bootstrap.min.js"></script></head>
 
 <body>
-  <div class="table-responsive">
-    <table class="table table-bordered">
-    <thead>
-      <tr>
-        <th>表格标题</th>
-        <th>表格标题</th>
-        <th>表格标题</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr>
-        <td>表格单元格</td>
-        <td>表格单元格</td>
-        <td>表格单元格</td>
-      </tr>
-      <tr>
-        <td>表格单元格</td>
-        <td>表格单元格</td>
-        <td>表格单元格</td>
-      </tr>
-      <tr>
-        <td>表格单元格</td>
-        <td>表格单元格</td>
-        <td>表格单元格</td>
-      </tr>
-      <tr>
-        <td>表格单元格</td>
-        <td>表格单元格</td>
-        <td>表格单元格</td>
-      </tr>
-    </tbody>
-  </table>
- </div>
+  <div class="container">
+    <div class="row">
+        <div class="col-md-8">
+            我在里面嵌套了一个网格
+            <div class="row">
+                <div class="col-md-6">col-md-6</div>
+                <div class="col-md-6">col-md-6</div>
+            </div>
+        </div>
+        <div class="col-md-4">col-md-4</div>
+    </div>
+    <div class="row">
+        <div class="col-md-4">col-md-4</div>
+        <div class="col-md-8">
+            
+            <div class="row">
+                <div class="col-md-4">col-md-4</div>
+                <div class="col-md-4">col-md-4</div>
+                <div class="col-md-4">col-md-4</div>
+            </div>
+        </div>
+    </div>
+</div>
+  
+  
 </body>
 </html>
