--- a/task7/2.html
+++ b/task7/2.html
@@ -67,6 +67,14 @@
         <span class="size-color3">8号被全民投票投死，8号是杀手</span>
     </div>
     <div class="lien1"></div>
+    <div class="footer">
+         <p class="option backgrung-color1">
+       再来一局
+    </p>
+         <p class="option backgrung-color2">
+        保存并分享
+         </p>
+    </div>
 </body>
 
 </html>
