--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
     <a href="./task4/1.html">任务四</a>
     <a href="./task5/1.html">任务五</a>
     <a href="./task6/1.html">任务六</a>
+    <a href="/task7/1.html">任务七</a>
+    <a href="task7/2.html">任务七1</a>
 </body>
 
 </html>
