--- a/test/test1.html
+++ b/test/test1.html
@@ -1,13 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
-    <link href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.css" rel="stylesheet">
+    <style>
+        .box {
+            height: 200px;
+            width: 200px;
+            position: relative;
+            background-color: bisque;
+        }
+
+        .box1 {
+            width: 200px;
+            height: 30px;
+            position: absolute;
+            top: 50%;
+            margin-top: -15px;
+            transform: rotate(45deg);
+            background-color: brown;
+        }
+
+        .box2 {
+            width: 30px;
+            height: 200px;
+            position: absolute;
+            left: 50%;
+            margin-left: -15px;
+            transform: rotate(45deg);
+            background-color: brown;
+
+        }
+    </style>
 </head>
+
 <body>
-    
+    <div class="box">
+        <div class="box1">
+
+        </div>
+        <div class="box2"></div>
+    </div>
+
+
 </body>
+
 </html>
