--- a/task7/3.html
+++ b/task7/3.html
@@ -24,6 +24,151 @@
         <span>发言讨论结束，大家请投票</span>
         <img src="img/play.png">
     </div>
+    <div class="backgroung">
+        <div class="triangle">
+
+        </div>
+        <p class="annotation">点击投票数最多人的头像</p>
+    </div>
+    <div class="big-box">
+        <div class="head">
+            <div class="small-box">
+                <p class="name">水民</p>
+                <p class="number">1号</p>
+                <ul class="list">
+                    <li class="picture1 picture-style"></li>
+                    <li class="picture2 picture-style"></li>
+                    <li class="picture3 picture-style"></li>
+                    <li class="picture4 picture-style"></li>
+                </ul>
+            </div>
+        </div>
+
+        <div class="head">
+            <div class="small-box">
+                <p class="name">水民</p>
+                <p class="number">1号</p>
+                <ul class="list">
+                    <li class="picture1 picture-style"></li>
+                    <li class="picture2 picture-style"></li>
+                    <li class="picture3 picture-style"></li>
+                    <li class="picture4 picture-style"></li>
+            </div>
+        </div>
+        <div class="head">
+            <div class="small-box">
+                <p class="name">水民</p>
+                <p class="number">1号</p>
+                <ul class="list">
+                    <li class="picture1 picture-style"></li>
+                    <li class="picture2 picture-style"></li>
+                    <li class="picture3 picture-style"></li>
+                    <li class="picture4 picture-style"></li>
+            </div>
+        </div>
+        <div class="head">
+            <div class="small-box">
+                <p class="name">水民</p>
+                <p class="number">1号</p>
+                <ul class="list">
+                    <li class="picture1 picture-style"></li>
+                    <li class="picture2 picture-style"></li>
+                    <li class="picture3 picture-style"></li>
+                    <li class="picture4 picture-style"></li>
+            </div>
+        </div>
+        <div class="head">
+            <div class="small-box">
+                <p class="name">水民</p>
+                <p class="number">1号</p>
+                <ul class="list">
+                    <li class="picture1 picture-style"></li>
+                    <li class="picture2 picture-style"></li>
+                    <li class="picture3 picture-style"></li>
+                    <li class="picture4 picture-style"></li>
+            </div>
+        </div>
+        <div class="head">
+            <div class="small-box">
+                <p class="name">水民</p>
+                <p class="number">1号</p>
+                <ul class="list">
+                    <li class="picture1 picture-style"></li>
+                    <li class="picture2 picture-style"></li>
+                    <li class="picture3 picture-style"></li>
+                    <li class="picture4 picture-style"></li>
+            </div>
+        </div>
+        <div class="head">
+            <div class="small-box">
+                <p class="name">水民</p>
+                <p class="number">1号</p>
+                <ul class="list">
+                    <li class="picture1 picture-style"></li>
+                    <li class="picture2 picture-style"></li>
+                    <li class="picture3 picture-style"></li>
+                    <li class="picture4 picture-style"></li>
+            </div>
+        </div>
+        <div class="head">
+            <div class="small-box">
+                <p class="name">水民</p>
+                <p class="number">1号</p>
+                <ul class="list">
+                    <li class="picture1 picture-style"></li>
+                    <li class="picture2 picture-style"></li>
+                    <li class="picture3 picture-style"></li>
+                    <li class="picture4 picture-style"></li>
+            </div>
+        </div>
+        <div class="head">
+            <div class="small-box">
+                <p class="name">水民</p>
+                <p class="number">1号</p>
+                <ul class="list">
+                    <li class="picture1 picture-style"></li>
+                    <li class="picture2 picture-style"></li>
+                    <li class="picture3 picture-style"></li>
+                    <li class="picture4 picture-style"></li>
+            </div>
+        </div>
+        <div class="head">
+            <div class="small-box">
+                <p class="name">水民</p>
+                <p class="number">1号</p>
+                <ul class="list">
+                    <li class="picture1 picture-style"></li>
+                    <li class="picture2 picture-style"></li>
+                    <li class="picture3 picture-style"></li>
+                    <li class="picture4 picture-style"></li>
+            </div>
+        </div>
+        <div class="head">
+            <div class="small-box">
+                <p class="name">水民</p>
+                <p class="number">1号</p>
+                <ul class="list">
+                    <li class="picture1 picture-style"></li>
+                    <li class="picture2 picture-style"></li>
+                    <li class="picture3 picture-style"></li>
+                    <li class="picture4 picture-style"></li>
+            </div>
+        </div>
+        <div class="head">
+            <div class="small-box">
+                <p class="name">水民</p>
+                <p class="number">1号</p>
+                <ul class="list">
+                    <li class="picture1 picture-style"></li>
+                    <li class="picture2 picture-style"></li>
+                    <li class="picture3 picture-style"></li>
+                    <li class="picture4 picture-style"></li>
+            </div>
+        </div>
+    </div>
+    <div class="footer">
+        <p>投死</p>
+    </div>
 </body>
 
 </html>
