--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <a href="./task6/1.html">任务六</a>
     <a href="/task7/1.html">任务七</a>
     <a href="task7/2.html">任务七1</a>
+    <a href="task7/3.html">任务2</a>
 </body>
 
 </html>
