--- a/task7/3.html
+++ b/task7/3.html
@@ -169,6 +169,7 @@
     <div class="footer">
         <p>投死</p>
     </div>
+    <audio src="../task7/music/fly.mp3" autoplay="true" loop="true" ></audio>
 </body>
 
 </html>
