--- a/task7/1.html
+++ b/task7/1.html
@@ -18,9 +18,9 @@
         <img src="img/Back.png">
     </div>
     <div class="box">
-        <div class="name">
+        <p class="name">
             捉鬼游戏
-        </div>
+        </p>
         <div class="line"></div>
         <div class="triangle"></div>
         <div class="plate">简化版</div>
