--- a/task6/1.html
+++ b/task6/1.html
@@ -12,8 +12,8 @@
 <body>
     <div class="header">
         <div class="button-box">
-            <button class="button1 button-style">找雇主
-                <button class="button2 button-style">找护工</button>
+            <p class="button-style button1">找雇主</p>
+            <p class="button-style button2">找护工</p>
         </div>
         <img class="location" src="img/location.png">
     </div>
