--- a/task8/1.html
+++ b/task8/1.html
@@ -1,13 +1,115 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+    <link href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.css" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="css/1.css">
+    <script src="http://cdn.static.runoob.com/libs/jquery/2.1.1/jquery.min.js"></script>
+    <script src="http://cdn.static.runoob.com/libs/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </head>
+
 <body>
-    
+    <div class="container">
+        <div class="row header-top">
+            <span class="hidden-xs">客服热线：1234-123-12</span>
+            <div class="register hidden-xs">
+                <div class="qq">
+                </div>
+                <div class="sine">
+                </div>
+                <div class="n">
+                </div>
+                <p>登陆
+                    <span class="separator"></span>注册</p>
+
+            </div>
+            <span class="visible-xs register1">注册
+                <span class="separator"></span>登陆</span>
+        </div>
+    </div>
+    <div class="box">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-3 col-sm-5  hidden-xs padding-left">
+                    <img class="log" src="img/home-logo-hs.png">
+                </div>
+                <div class="col-md-6 col-md-push-3 col-sm-7 hidden-xs padding-right">
+                    <ul>
+                        <li class="list1">职业殿堂</li>
+                        <li class="list1">线上学习</li>
+                        <li class="list1">我的学院</li>
+                        <li class="list1">学习资料</li>
+                        <li class="list1">线下实战</li>
+                    </ul>
+                </div>
+            </div>
+            <div class="log-box visible-xs">
+                <img class="log" src="img/home-logo-hs.png">
+
+            </div>
+            <div class="down-list visible-xs">
+                <a class="visible-xs" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo">
+                    <img src="img/menu.png">
+                </a>
+            </div>
+        </div>
+        <div id="collapseTwo" class="panel-collapse collapse">
+            <ul>
+                <li class="list2">职业殿堂</li>
+                <li class="list2">线上学习</li>
+                <li class="list2">我的学院</li>
+                <li class="list2">学习资料</li>
+                <li class="list2">线下实战</li>
+            </ul>
+        </div>
+    </div>
+    <div id="myCarousel" class="carousel slide" data-ride="carousel" data-interval="5000">
+        <!-- 轮播（Carousel）指标 -->
+        <ol class="carousel-indicators">
+            <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+            <li data-target="#myCarousel" data-slide-to="1"></li>
+            <li data-target="#myCarousel" data-slide-to="2"></li>
+            <li data-target="#myCarousel" data-slide-to="3"></li>
+            <li data-target="#myCarousel" data-slide-to="4"></li>
+        </ol>
+        <!-- 轮播（Carousel）项目 -->
+        <div class="carousel-inner">
+            <div class="item active">
+                <img src="img/one.png" alt="First slide">
+            </div>
+            <div class="item">
+                <img src="img/two.png" alt="Second slide">
+            </div>
+            <div class="item">
+                <img src="img/three.jpeg" alt="Third slide">
+            </div>
+            <div class="item">
+                <img src="img/four.png" alt="fourth slide">
+            </div>
+            <div class="item">
+                <img src="img/five.jpg" alt="fifth slide">
+            </div>
+        </div>
+        <!-- 轮播（Carousel）导航 -->
+        <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
+            <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+        </a>
+        <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
+            <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+        </a>
+    </div>
+    <div class="container">
+        <div class="row">
+         
+
+        </div>
+    </div>
 </body>
+
 </html>
