--- a/test/test.html
+++ b/test/test.html
@@ -8,30 +8,18 @@
 <script src="http://cdn.static.runoob.com/libs/bootstrap/3.3.7/js/bootstrap.min.js"></script></head>
 
 <body>
-  <div class="container">
-    <div class="row">
-        <div class="col-md-8">
-            我在里面嵌套了一个网格
-            <div class="row">
-                <div class="col-md-6">col-md-6</div>
-                <div class="col-md-6">col-md-6</div>
+        <div id="carousel-ad" class="carousel slide" data-ride="carousel">
+                <ol class="carousel-indicators">
+                    <li data-target="#carousel-ad" data-slide-to="0" class="active"></li>
+                    <li data-target="#carousel-ad" data-slide-to="1"></li>
+                    <li data-target="#carousel-ad" data-slide-to="2"></li>
+                </ol>
+                <div class="carousel-inner" role="listbox">
+                    <div class="item active"><img class="img-responsive" src="images/pic01.jpg"></div>
+                    <div class="item"><img class="img-responsive" src="images/pic02.jpg"></div>
+                    <div class="item"><img class="img-responsive" src="images/pic03.jpg"></div>
+                </div>
             </div>
-        </div>
-        <div class="col-md-4">col-md-4</div>
-    </div>
-    <div class="row">
-        <div class="col-md-4">col-md-4</div>
-        <div class="col-md-8">
-            
-            <div class="row">
-                <div class="col-md-4">col-md-4</div>
-                <div class="col-md-4">col-md-4</div>
-                <div class="col-md-4">col-md-4</div>
-            </div>
-        </div>
-    </div>
-</div>
-  
   
 </body>
 </html>
