--- a/index.html
+++ b/index.html
@@ -17,7 +17,10 @@
     <a href="./task6/1.html">任务六</a>
     <a href="task7/1.html">任务七</a>
     <a href="task7/2.html">任务七1</a>
-    <a href="task7/3.html">任务2</a>
+    <a href="task7/3.html">任务七2</a>
+    <a href="task8/1.html">任务八九1</a>
+    <a href="task8/2.html">任务八九2</a>
+    <a href="task8/3.html">任务八九3</a>
 </body>
 
 </html>
