--- a/task8/1.html
+++ b/task8/1.html
@@ -8,8 +8,6 @@
     <title>Document</title>
     <link href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.css" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="css/1.css">
-    <script src="http://cdn.static.runoob.com/libs/jquery/2.1.1/jquery.min.js"></script>
-    <script src="http://cdn.static.runoob.com/libs/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </head>
 
 <body>
@@ -228,6 +226,20 @@
                 <strong>优秀学院展示</strong>
             </p>
 
+
+
+
+
+
+
+
+
+
+
+
+            <script src="https://cdn.bootcss.com/jquery/3.3.1/jquery.js"></script>
+
+            <script src="https://cdn.bootcss.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </body>
 
 </html>
