--- a/task8/1.html
+++ b/task8/1.html
@@ -164,67 +164,107 @@
                 <p class="circle-right2 center visible-xs">匹配你的个人情况，找到合适你的岗位</p>
             </div>
             <div class="col-md-3 col-sm-6 guiding">
-                    <div class="arrows hidden-xs"></div>
-                    <p class="circle circle-left hidden-xs">2</p>
-                    <p class="circle circle1 visible-xs">2</p>
-                    <p class="circle-right1 visible-md visible-lg">了解职业竞争压力，薪资待遇等</p>
-                    <p class="circle-right2 visible-sm">了解职业竞争压力，薪资待遇等</p>
-                    <p class="circle-right2 center visible-xs">了解职业竞争压力，薪资待遇等</p>
+                <div class="arrows hidden-xs"></div>
+                <p class="circle circle-left hidden-xs">2</p>
+                <p class="circle circle1 visible-xs">2</p>
+                <p class="circle-right1 visible-md visible-lg">了解职业竞争压力，薪资待遇等</p>
+                <p class="circle-right2 visible-sm">了解职业竞争压力，薪资待遇等</p>
+                <p class="circle-right2 center visible-xs">了解职业竞争压力，薪资待遇等</p>
             </div>
             <div class="col-md-3 col-sm-6 guiding">
-                    <div class="arrows visible-md visible-lg"></div>
-                    <p class="circle circle-left visible-md visible-lg">3</p>
-                    <p class="circle visible-sm">3</p>
-                    <p class="circle circle1 visible-xs">3</p>
-                    <p class="circle-right2 hidden-xs">匹配你的个人情况</p>
-                    <p class="circle-right2 center visible-xs">匹配你的个人情况</p>
+                <div class="arrows visible-md visible-lg"></div>
+                <p class="circle circle-left visible-md visible-lg">3</p>
+                <p class="circle visible-sm">3</p>
+                <p class="circle circle1 visible-xs">3</p>
+                <p class="circle-right2 hidden-xs">匹配你的个人情况</p>
+                <p class="circle-right2 center visible-xs">匹配你的个人情况</p>
             </div>
             <div class="col-md-3 col-sm-6 guiding">
-                    <div class="arrows hidden-xs"></div>
-                    <p class="circle circle-left hidden-xs">4</p>
-                    <p class="circle circle1 visible-xs">4</p>
-                    <p class="circle-right2 hidden-xs">查看任务指标</p>
-                    <p class="circle-right2 center visible-xs">查看任务指标</p>
+                <div class="arrows hidden-xs"></div>
+                <p class="circle circle-left hidden-xs">4</p>
+                <p class="circle circle1 visible-xs">4</p>
+                <p class="circle-right2 hidden-xs">查看任务指标</p>
+                <p class="circle-right2 center visible-xs">查看任务指标</p>
 
             </div>
-        
-                <div class="col-md-3 col-sm-6 guiding">
-                    <p class="circle hidden-xs">5</p>
-                    <p class="circle circle1 visible-xs">5</p>
-                    <p class="circle-right1 visible-md visible-lg">参加学习，掌握技能点薪资待遇优厚等</p>
-                    <p class="circle-right2 visible-sm">参加学习，掌握技能点薪资待遇优厚等</p>
-                    <p class="circle-right2 center visible-xs">参加学习，掌握技能点薪资待遇优厚等</p>
+
+            <div class="col-md-3 col-sm-6 guiding">
+                <p class="circle hidden-xs">5</p>
+                <p class="circle circle1 visible-xs">5</p>
+                <p class="circle-right1 visible-md visible-lg">参加学习，掌握技能点薪资待遇优厚等</p>
+                <p class="circle-right2 visible-sm">参加学习，掌握技能点薪资待遇优厚等</p>
+                <p class="circle-right2 center visible-xs">参加学习，掌握技能点薪资待遇优厚等</p>
+            </div>
+            <div class="col-md-3 col-sm-6 guiding">
+                <div class="arrows hidden-xs"></div>
+                <p class="circle circle-left hidden-xs">6</p>
+                <p class="circle circle1 visible-xs">6</p>
+                <p class="circle-right1 visible-md visible-lg">加入班级，和小伙伴互帮互助，互相学习</p>
+                <p class="circle-right2 visible-sm">加入班级，和小伙伴互帮互助，互相学习</p>
+                <p class="circle-right2 center visible-xs">加入班级，和小伙伴互帮互助，互相学习</p>
+            </div>
+            <div class="col-md-3 col-sm-6 guiding">
+                <div class="arrows visible-md visible-lg"></div>
+                <p class="circle circle-left visible-md visible-lg">7</p>
+                <p class="circle visible-sm">7</p>
+                <p class="circle circle1 visible-xs">7</p>
+                <p class="circle-right2 hidden-xs">加速成长</p>
+                <p class="circle-right2 center visible-xs">加速成长</p>
+            </div>
+            <div class="col-md-3 col-sm-6 guiding">
+                <div class="arrows hidden-xs"></div>
+                <p class="circle circle-left hidden-xs">8</p>
+                <p class="circle circle1 visible-xs">8</p>
+                <p class="circle-right1 visible-md visible-lg">完成置业计划，升级成为业界大牛</p>
+                <p class="circle-right2 visible-sm">完成置业计划，升级成为业界大牛</p>
+                <p class="circle-right2 center visible-xs">完成置业计划，升级成为业界大牛</p>
+            </div>
+
+        </div>
+    </div>
+    <p class="title2">
+        <strong>优秀学院展示</strong>
+    </p>
+    <div class="container">
+        <div class="row">
+            <div class="col-md-3 col-sm-6 card">
+                <div class="frame">
+                    <div class="head1 head"></div>
+                    <p class="name">
+                        <strong>技术顾问：罗大佑</strong>
+                    </p>
+                    <p class="introduce">搜索引擎专家。曾担任谷歌中国工程研究院副院长兼全球工程技术总监、人民搜索首席科学家。2013年9月16日，正式加盟百度，担任百度公司技术副总裁。</p>
                 </div>
-                <div class="col-md-3 col-sm-6 guiding">
-                        <div class="arrows hidden-xs"></div>
-                        <p class="circle circle-left hidden-xs">6</p>
-                        <p class="circle circle1 visible-xs">6</p>
-                        <p class="circle-right1 visible-md visible-lg">加入班级，和小伙伴互帮互助，互相学习</p>
-                        <p class="circle-right2 visible-sm">加入班级，和小伙伴互帮互助，互相学习</p>
-                        <p class="circle-right2 center visible-xs">加入班级，和小伙伴互帮互助，互相学习</p>
+            </div>
+            <div class="col-md-3 col-sm-6 card">
+                <div class="frame">
+                    <div class="head2 head"></div>
+                    <p class="name">
+                        <strong>技术顾问：罗大佑</strong>
+                    </p>
+                    <p class="introduce">搜索引擎专家。曾担任谷歌中国工程研究院副院长兼全球工程技术总监、人民搜索首席科学家。2013年9月16日，正式加盟百度，担任百度公司技术副总裁。</p>
                 </div>
-                <div class="col-md-3 col-sm-6 guiding">
-                        <div class="arrows visible-md visible-lg"></div>
-                        <p class="circle circle-left visible-md visible-lg">7</p>
-                        <p class="circle visible-sm">7</p>
-                        <p class="circle circle1 visible-xs">7</p>
-                        <p class="circle-right2 hidden-xs">加速成长</p>
-                        <p class="circle-right2 center visible-xs">加速成长</p>
+            </div>
+            <div class="col-md-3 col-sm-6 card">
+                <div class="frame">
+                    <div class="head3 head"></div>
+                    <p class="name">
+                        <strong>技术顾问：罗大佑</strong>
+                    </p>
+                    <p class="introduce">搜索引擎专家。曾担任谷歌中国工程研究院副院长兼全球工程技术总监、人民搜索首席科学家。2013年9月16日，正式加盟百度，担任百度公司技术副总裁。</p>
                 </div>
-                <div class="col-md-3 col-sm-6 guiding">
-                        <div class="arrows hidden-xs"></div>
-                        <p class="circle circle-left hidden-xs">8</p>
-                        <p class="circle circle1 visible-xs">8</p>
-                        <p class="circle-right1 visible-md visible-lg">完成置业计划，升级成为业界大牛</p>
-                        <p class="circle-right2 visible-sm">完成置业计划，升级成为业界大牛</p>
-                        <p class="circle-right2 center visible-xs">完成置业计划，升级成为业界大牛</p>
+            </div>
+            <div class="col-md-3 col-sm-6 card">
+                <div class="frame">
+                    <div class="head4 head"></div>
+                    <p class="name">
+                        <strong>技术顾问：罗大佑</strong>
+                    </p>
+                    <p class="introduce">搜索引擎专家。曾担任谷歌中国工程研究院副院长兼全球工程技术总监、人民搜索首席科学家。2013年9月16日，正式加盟百度，担任百度公司技术副总裁。</p>
                 </div>
-                
             </div>
         </div>
-        <p class="title2">
-                <strong>优秀学院展示</strong>
-            </p>
+    </div>
 
 
 
@@ -237,9 +277,9 @@
 
 
 
-            <script src="https://cdn.bootcss.com/jquery/3.3.1/jquery.js"></script>
+    <script src="https://cdn.bootcss.com/jquery/3.3.1/jquery.js"></script>
 
-            <script src="https://cdn.bootcss.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <script src="https://cdn.bootcss.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </body>
 
 </html>
