--- a/task8/1.html
+++ b/task8/1.html
@@ -265,6 +265,12 @@
             </div>
         </div>
     </div>
+    <div class="paging">
+        <div class="small-circle1 small-circle"></div>
+        <div class="small-circle2 small-circle"></div>
+        <div class="small-circle3 small-circle"></div>
+        <div class="small-circle4 small-circle"></div>
+    </div>
 
 
 
