--- a/test/test.html
+++ b/test/test.html
@@ -8,18 +8,13 @@
 <script src="http://cdn.static.runoob.com/libs/bootstrap/3.3.7/js/bootstrap.min.js"></script></head>
 
 <body>
-        <div id="carousel-ad" class="carousel slide" data-ride="carousel">
-                <ol class="carousel-indicators">
-                    <li data-target="#carousel-ad" data-slide-to="0" class="active"></li>
-                    <li data-target="#carousel-ad" data-slide-to="1"></li>
-                    <li data-target="#carousel-ad" data-slide-to="2"></li>
-                </ol>
-                <div class="carousel-inner" role="listbox">
-                    <div class="item active"><img class="img-responsive" src="images/pic01.jpg"></div>
-                    <div class="item"><img class="img-responsive" src="images/pic02.jpg"></div>
-                    <div class="item"><img class="img-responsive" src="images/pic03.jpg"></div>
-                </div>
-            </div>
+        <ol class="carousel-indicators">
+                <li data-target="#myCarousel"></li>
+                <li data-target="#myCarousel"></li>
+                <li data-target="#myCarousel"></li>
+                <li data-target="#myCarousel"></li>
+                <li data-target="#myCarousel"></li>
+            </ol>
   
 </body>
 </html>
