--- a/task8/1.html
+++ b/task8/1.html
@@ -36,12 +36,12 @@
                     <img class="log" src="img/home-logo-hs.png">
                 </div>
                 <div class="col-md-6 col-md-push-3 col-sm-7 hidden-xs padding-right">
-                    <ul>
-                        <li class="list1">职业殿堂</li>
-                        <li class="list1">线上学习</li>
-                        <li class="list1">我的学院</li>
-                        <li class="list1">学习资料</li>
-                        <li class="list1">线下实战</li>
+                    <ul class="list-none">
+                        <li class="list1 list-none">职业殿堂</li>
+                        <li class="list1 list-none">线上学习</li>
+                        <li class="list1 list-none">我的学院</li>
+                        <li class="list1 list-none">学习资料</li>
+                        <li class="list1 list-none">线下实战</li>
                     </ul>
                 </div>
             </div>
@@ -56,12 +56,12 @@
             </div>
         </div>
         <div id="collapseTwo" class="panel-collapse collapse">
-            <ul class="visible-xs">
-                <li class="list2">职业殿堂</li>
-                <li class="list2">线上学习</li>
-                <li class="list2">我的学院</li>
-                <li class="list2">学习资料</li>
-                <li class="list2">线下实战</li>
+            <ul class="visible-xs list-none">
+                <li class="list2 list-none">职业殿堂</li>
+                <li class="list2 list-none">线上学习</li>
+                <li class="list2 list-none">我的学院</li>
+                <li class="list2 list-none">学习资料</li>
+                <li class="list2 list-none">线下实战</li>
             </ul>
         </div>
     </div>
@@ -155,7 +155,7 @@
         <strong>如何学习</strong>
     </p>
     <div class="container">
-        <div class="row">
+        <div class="row font-size">
             <div class="col-md-3 col-sm-6 guiding">
                 <p class="circle hidden-xs">1</p>
                 <p class="circle circle1 visible-xs">1</p>
@@ -271,9 +271,92 @@
         <div class="small-circle3 small-circle"></div>
         <div class="small-circle4 small-circle"></div>
     </div>
+    <p class="title2">
+        <strong>战略合作伙伴</strong>
+    </p>
+    <div class="container">
+        <div class="row">
+            <div class="log-box0 hidden-xs hidden-sm">
+                <div class="log1 log-style"></div>
+                <div class="log2 log-style"></div>
+                <div class="log3 log-style"></div>
+                <div class="log4 log-style"></div>
+                <div class="log5 log-style"></div>
+            </div>
+            <div class="log-box1 hidden-xs hidden-lg hidden-md">
+                <div class="log-style1 log6"></div>
+                <div class="log-style1 log7"></div>
+                <div class="log-style1 log8"></div>
+                <div class="log-style1 log9"></div>
+                <div class="log-style1 log10"></div>
+            </div>
+            <div class="visible-xs">
+                <div class="log-style2 log11"></div>
+                <div class="log-style2 log12"></div>
+                <div class="log-style2 log13"></div>
+                <div class="log-style2 log14"></div>
+                <div class="log-style2 log15"></div>
+            </div>
+        </div>
+    </div>
+    <p class="title2">
+        <strong>友情链接</strong>
+    </p>
 
+    <div class="container">
+        <div class="row">
+            <ul>
+                <li class="list-down">手机软件</li>
+                <li class="list-down">手机软件</li>
+                <li class="list-down">手机软件</li>
+                <li class="list-down">手机软件</li>
+                <li class="list-down">手机软件</li>
+                <li class="list-down">手机软件</li>
+                <li class="list-down">手机软件</li>
+                <li class="list-down">手机软件</li>
+                <li class="list-down">手机软件</li>
+                <li class="list-down">手机软件</li>
+                <li class="list-down">手机软件</li>
+                <li class="list-down">手机软件</li>
+                <li class="list-down">手机软件</li>
+                <li class="list-down">手机软件</li>
+                <li class="list-down">手机软件</li>
+                <li class="list-down">手机软件</li>
+                <li class="list-down">手机软件</li>
+                <li class="list-down">手机软件</li>
+                <li class="list-down">手机软件</li>
+                <li class="list-down">手机软件</li>
+            </ul>
 
+        </div>
+    </div>
+    <div class="footer">
+        <div class="container">
+            <div class="row">
+                <div class="col-sm-5 footer-box1">
+                    <span class="font-style1">技能树一改变你我</span>
+                    </br>
+                    <span>关于我们</span>
+                    <span class="font-style2">了解我们</span>
+                    <span>合作企业</span>
+                </div>
+                <div class="col-sm-5">
+                    <span class="font-style3">旗下网站</span>
+                    </br>
+                    <span class="font-style4">草船云卵什么</span>
+                    <span>最强it训练营</span>
+                    </br>
+                    <span class="font-style5">葡萄藤轻游戏</span>
+                    <span>桌游精灵</span>
+                </div>
+                <div class="col-sm-2">
+                    <span class="font-style6">微信公众平台</span></br>
+                    <div class="code"></div>
+                </div>
+            </div>
+        </div>
 
+    </div>
 
 
 
