--- a/task8/1.html
+++ b/task8/1.html
@@ -306,26 +306,27 @@
     <div class="container">
         <div class="row">
             <ul>
-                <li class="list-down">手机软件</li>
-                <li class="list-down">手机软件</li>
-                <li class="list-down">手机软件</li>
-                <li class="list-down">手机软件</li>
-                <li class="list-down">手机软件</li>
-                <li class="list-down">手机软件</li>
-                <li class="list-down">手机软件</li>
-                <li class="list-down">手机软件</li>
-                <li class="list-down">手机软件</li>
-                <li class="list-down">手机软件</li>
-                <li class="list-down">手机软件</li>
-                <li class="list-down">手机软件</li>
-                <li class="list-down">手机软件</li>
-                <li class="list-down">手机软件</li>
-                <li class="list-down">手机软件</li>
-                <li class="list-down">手机软件</li>
-                <li class="list-down">手机软件</li>
-                <li class="list-down">手机软件</li>
-                <li class="list-down">手机软件</li>
-                <li class="list-down">手机软件</li>
+                <li class="list-down"><span class="list-span">手机软件</span></li>
+                <li class="list-down"><span class="list-span">手机软件</span></li>
+                <li class="list-down"><span class="list-span">手机软件</span></li>
+                <li class="list-down"><span class="list-span">手机软件</span></li>
+                <li class="list-down"><span class="list-span">手机软件</span></li>
+                <li class="list-down"><span class="list-span">手机软件</span></li>
+                <li class="list-down"><span class="list-span">手机软件</span></li>
+                <li class="list-down"><span class="list-span">手机软件</span></li>
+                <li class="list-down"><span class="list-span">手机软件</span></li>
+                <li class="list-down"><span class="list-span">手机软件</span></li>
+                <li class="list-down"><span class="list-span">手机软件</span></li>
+                <li class="list-down"><span class="list-span">手机软件</span></li>
+                <li class="list-down"><span class="list-span">手机软件</span></li>
+                <li class="list-down"><span class="list-span">手机软件</span></li>
+                <li class="list-down"><span class="list-span">手机软件</span></li>
+                <li class="list-down"><span class="list-span">手机软件</span></li>
+                <li class="list-down"><span class="list-span">手机软件</span></li>
+                <li class="list-down"><span class="list-span">手机软件</span></li>
+                <li class="list-down"><span class="list-span">手机软件</span></li>
+                <li class="list-down"><span class="list-span">手机软件</span></li>
+                
             </ul>
 
         </div>
@@ -357,6 +358,8 @@
         </div>
 
     </div>
+    <p class="small-footer">copyrght @ 2015技能书 www.jnshu.com ALL rights reserved丨京ICP 1321564987号</p>
+
 
 
 
