--- a/task8/1.html
+++ b/task8/1.html
@@ -358,6 +358,8 @@
         </div>
 
     </div>
+    
+    <div class="line"></div>
     <p class="small-footer">copyrght @ 2015技能书 www.jnshu.com ALL rights reserved丨京ICP 1321564987号</p>
 
 
