--- a/task8/1.html
+++ b/task8/1.html
@@ -41,7 +41,7 @@
                         <li class="list1 list-none">线上学习</li>
                         <li class="list1 list-none">我的学院</li>
                         <li class="list1 list-none">学习资料</li>
-                        <li class="list1 list-none">线下实战</li>
+                        <li class="list1 list-none margin-right">线下实战</li>
                     </ul>
                 </div>
             </div>
@@ -275,7 +275,7 @@
         <strong>战略合作伙伴</strong>
     </p>
     <div class="container">
-        <div class="row">
+        
             <div class="log-box0 hidden-xs hidden-sm">
                 <div class="log1 log-style"></div>
                 <div class="log2 log-style"></div>
@@ -298,7 +298,7 @@
                 <div class="log-style2 log15"></div>
             </div>
         </div>
-    </div>
+    
     <p class="title2">
         <strong>友情链接</strong>
     </p>
@@ -350,7 +350,7 @@
                     <span class="font-style5">葡萄藤轻游戏</span>
                     <span>桌游精灵</span>
                 </div>
-                <div class="col-sm-2">
+                <div class="col-sm-2 center">
                     <span class="font-style6">微信公众平台</span></br>
                     <div class="code"></div>
                 </div>
