--- a/test/test.html
+++ b/test/test.html
@@ -1,20 +1,58 @@
-<!DOCTYPE HTML>
-<html>
+<!DOCTYPE html>
+<html lang="en">
+
 <head>
-<meta charset="utf-8">
-<title>基础表格</title>
-<link href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.css" rel="stylesheet">
-<script src="http://cdn.static.runoob.com/libs/jquery/2.1.1/jquery.min.js"></script>
-<script src="http://cdn.static.runoob.com/libs/bootstrap/3.3.7/js/bootstrap.min.js"></script></head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta http-equiv="X-UA-Compatible" content="ie=edge">
+        <title>Document</title>
+        <link href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.css" rel="stylesheet">
+</head>
+
+<style>
+        .red {
+                background-color: red;
+        }
+
+        .yellow {
+                background-color: rgb(7, 116, 101);
+        }
+
+        .green {
+                background-color: green;
+        }
+
+        .gold {
+                background-color: gold;
+        }
+
+        .center {
+                text-align: center;
+                color: #fff;
+                font-size: 12rem;
+        }
+
+@media screen and (max-width:768px) {
+        .center {
+                text-align: left;
+        }
+}
+        
+</style>
 
 <body>
-        <ol class="carousel-indicators">
-                <li data-target="#myCarousel"></li>
-                <li data-target="#myCarousel"></li>
-                <li data-target="#myCarousel"></li>
-                <li data-target="#myCarousel"></li>
-                <li data-target="#myCarousel"></li>
-            </ol>
-  
+               
+        <div class="center">
+                <p class="red hidden-xs">768以下</p>
+                <p class="red visible-xs">dfdf</p>
+                <p class="yellow visible-sm">768到992</p>
+                <p class="green visible-md">992到1200</p>
+                <p class="gold visible-lg">1200以上</p>
+        </div>
+
+        <script src="http://cdn.static.runoob.com/libs/jquery/2.1.1/jquery.min.js"></script>
+        <script src="http://cdn.static.runoob.com/libs/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+
 </body>
+
 </html>
