--- a/task7/1.html
+++ b/task7/1.html
@@ -10,9 +10,9 @@
 </head>
 
 <body>
-    <div class="header">
+    <hrader class="header">
         <img class="form" src="img/form.png">
-    </div>
+    </hrader>
     <div class="title">
         <span>上次游戏：捉鬼猜词版</span>
         <img src="img/Back.png">
@@ -21,13 +21,13 @@
         <p class="name">
             捉鬼游戏
         </p>
-        <div class="line"></div>
+        
         <div class="triangle"></div>
-        <div class="plate">简化版</div>
+        <a class="plate">简化版</a>
         <p class="tag">有1123个用户正在玩此款游戏</p>
-        <div class="plate">猜词版</div>
+        <a class="plate">猜词版</a>
         <p class="tag">有1123个用户正在玩此款游戏</p>
-        <div class="plate">白痴版</div>
+        <a class="plate">白痴版</a>
         <p class="tag">有1123个用户正在玩此款游戏</p>
         <div class="paging">
             <div class="circle circle1"></div>
