--- a/task7/3.html
+++ b/task7/3.html
@@ -10,16 +10,13 @@
 </head>
 
 <body>
-    <div class="header">
+    <header class="header">
         <img src="img/map.png">
         <p class="font-style1">投票</p>
         <div class="fork">
-            <div class="fork1">
-            </div>
-            <div class="fork2">
-            </div>
+            
         </div>
-    </div>
+    </header>
     <div class="music">
         <span>发言讨论结束，大家请投票</span>
         <img src="img/play.png">
@@ -177,9 +174,9 @@
             </div>
         </div>
     </div>
-    <div class="footer">
+    <footer class="footer">
         <p>投死</p>
-    </div>
+    </footer>
     <audio src="../task7/music/fly.mp3" autoplay="true" loop="true"></audio>
 </body>
 
