--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
     <a href="task8/1.html">任务八九1</a>
     <a href="task8/2.html">任务八九2</a>
     <a href="task8/3.html">任务八九3</a>
+    <a href="task10/1.html">任务10</a>
+    <a href="task11/1.html">任务11</a>
 </body>
 
 </html>
